--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,60 +3,60 @@
 /* Light */
 @font-face {
   font-family: 'Pluto';
-  src: url("../fonts/pluto/PlutoLight.otf");
+  src: url("assets/fonts/pluto/PlutoLight.otf");
   font-weight: 300;
   font-style: normal; }
 /* Regular */
 @font-face {
   font-family: 'Pluto';
-  src: url("../fonts/pluto/PlutoRegular.otf");
+  src: url("assets/fonts/pluto/PlutoRegular.otf");
   font-weight: normal;
   font-style: normal; }
 /* Medium */
 @font-face {
   font-family: 'Pluto';
-  src: url("../fonts/pluto/PlutoMedium.otf");
+  src: url("assets/fonts/pluto/PlutoMedium.otf");
   font-weight: 500;
   font-style: normal; }
 /* Bold */
 @font-face {
   font-family: 'Pluto';
-  src: url("../fonts/pluto/PlutoBold.otf");
+  src: url("assets/fonts/pluto/PlutoBold.otf");
   font-weight: 600;
   font-style: normal; }
 /* Black */
 @font-face {
   font-family: 'Pluto';
-  src: url("../fonts/pluto/PlutoBlack.otf");
+  src: url("assets/fonts/pluto/PlutoBlack.otf");
   font-weight: 800;
   font-style: normal; }
 /*** PLUTO SANS ***/
 /* Regular */
 @font-face {
   font-family: 'Pluto Sans';
-  src: url("../fonts/plutosans/PlutoSansRegular.otf");
+  src: url("assets/fonts/plutosans/PlutoSansRegular.otf");
   font-weight: normal;
   font-style: normal; }
 /* Bold */
 @font-face {
   font-family: 'Pluto Sans';
-  src: url("../fonts/plutosans/PlutoSansBold.otf");
+  src: url("assets/fonts/plutosans/PlutoSansBold.otf");
   font-weight: 600;
   font-style: normal; }
 /*** PLUTO SANS COND ***/
 @font-face {
   font-family: 'Pluto Sans Cond';
-  src: url("../fonts/plutosans/PlutoSansCondLight.otf");
+  src: url("assets/fonts/plutosans/PlutoSansCondLight.otf");
   font-weight: 300;
   font-style: normal; }
 @font-face {
   font-family: 'Pluto Sans Cond';
-  src: url("../fonts/plutosans/PlutoSansCondRegular.otf");
+  src: url("assets/fonts/plutosans/PlutoSansCondRegular.otf");
   font-weight: normal;
   font-style: normal; }
 @font-face {
   font-family: 'Pluto Sans Cond';
-  src: url("../fonts/plutosans/PlutoSansCondBold.otf");
+  src: url("assets/fonts/plutosans/PlutoSansCondBold.otf");
   font-weight: 600;
   font-style: normal; }
 
@@ -66,10 +66,12 @@ $verde: #78B33E;
 $white: #fff;
 $black: #000;
 $Azul: #00ded5;
+$Rosa: #b80455;
+$RosaClaro: #ff0064;
+$Cinza: #f2edec;
 
-$text: #333333;
+$text: #666666;
 
-$Raleway: 'Raleway', sans-serif;
 $Pluto: 'Pluto';
 $PlutoSans: 'Pluto Sans';
 $PlutoSansCond: 'Pluto Sans Cond';
@@ -81,14 +83,14 @@ html, body {
     color: $text;
     min-width: 320px;
 
-    font-family: $Raleway;
+    font-family: $Pluto;
     font-size: 16px;
 
     // line-height: 1.4;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: $Raleway;
+    font-family: $Pluto;
     margin-bottom: 30px;
     margin-top: 0;
 
@@ -110,7 +112,7 @@ a {
 }
 p{
   line-height: 25px;
-  font-family: $Raleway;
+  font-family: $Pluto;
   font-weight: 300;
 }
 p:last-child { margin-bottom: 0; }
@@ -164,24 +166,70 @@ figure.fit {
     padding: 0 !important;
 }
 
+.btn-verde{
+  background: #0ca614;
+  border-radius: 10px;
+  color: $white;
+  text-transform: uppercase;
+  border: none;
+  padding: 10px 20px;
+}
+
 /******************** BANNER ********************/
 
 .top-banner { 
-  height: 100%; height: 80vh; background-attachment: fixed;
+  height: 100%; height: 55vh;overflow:hidden;
+  img{
+    position: absolute;
+    left: 25%;
+    margin-left: -50px;
+  }
 }
 
-.top-banner-page { 
-  height: 100%; height: 45vh; background-attachment: fixed;
-  &:before{
-    content: '';
-    background: rgba(0, 222, 213, 0.3);
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    transform-origin: top;
+/******************** SESSAO 1 ********************/
+.sessao-1{
+  background: $Rosa;
+  h2{
+    font-size: 30px;
+    color: $white;
+    text-align: center;
   }
-}  
+}
+/******************** SESSAO 2 ********************/
+.sessao-2{
+  text-align: center;
+  background: $Cinza;
+  h2{
+    font-size: 38px;
+    color: $Rosa;
+    margin-bottom: 40px;
+  }
+  p{
+    padding-bottom: 25px;
+  }
+}
+/******************** SESSAO 3 ********************/
+.sessao-3{
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  h2{
+    font-size: 38px;
+    color: $RosaClaro;
+    margin-bottom: 60px;
+  }
+  img{
+    height: 140px;
+  }
+  figcaption{
+    margin-top: 40px;
+    color: $RosaClaro;
+  }
+  .btn-verde{
+    margin-top: 60px;
+    font-size: 20px;
+  }
+}
 
 
 /******************** FOOTER ********************/
