--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -173,21 +173,30 @@ figure.fit {
   text-transform: uppercase;
   border: none;
   padding: 10px 20px;
+  &:hover{
+    background: $RosaClaro;
+    color: $white;
+  }
 }
+
+/**************** INICIO POWERSHAPE ****************/
 
 /******************** BANNER ********************/
 
 .top-banner { 
-  height: 100%; height: 55vh;overflow:hidden;
   img{
-    position: absolute;
-    left: 25%;
-    margin-left: -50px;
+    max-width: 100%;
+    height: auto;
+  }
+  .btn-verde{
+    position: relative;
+    top: -120px;
+    left: 31%;
   }
 }
 
 /******************** SESSAO 1 ********************/
-.sessao-1{
+.powershape-sessao-1{
   background: $Rosa;
   h2{
     font-size: 30px;
@@ -196,7 +205,7 @@ figure.fit {
   }
 }
 /******************** SESSAO 2 ********************/
-.sessao-2{
+.powershape-sessao-2{
   text-align: center;
   background: $Cinza;
   h2{
@@ -209,7 +218,7 @@ figure.fit {
   }
 }
 /******************** SESSAO 3 ********************/
-.sessao-3{
+.powershape-sessao-3{
   text-align: center;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -231,90 +240,41 @@ figure.fit {
   }
 }
 
-
-/******************** FOOTER ********************/
-.pre-footer{
-  background-color: $Azul;
-  padding: 15px ;
-  position:relative;
-  img{
-    max-width: 100%;
-    margin-top: 20px;
+/******************** SESSAO 4 ********************/
+.powershape-sessao-4{
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  h2{
+    font-size: 38px;
+    color: $RosaClaro;
+    margin-bottom: 60px;
   }
-  .menu-footer{
-    margin-top: 50px;
-    li{
-      list-style: none;
-      display: inline-block;
-      margin-left: 13px;
-      .fa-circle{
-        color: $text;
-      }
-      .fa-inverse{
-        color: $Azul;
-      }
-      a{
-        color: $text;
-        text-transform: uppercase;
-        font-size: 14px;
-      }
-    }
+  img{
+    height: 140px;
+  }
+  figcaption{
+    margin-top: 40px;
+    color: $RosaClaro;
+  }
+  .btn-verde{
+    margin-top: 20px;
+    font-size: 20px;
   }
 }
-footer{
+
+/**************** FIM POWERSHAPE ****************/
+
+/******************** FOOTER ********************/
+.powershape-footer{
   text-align: center;
   padding: 5px;
   font-size: 13px;
+  background: rgb(32, 32, 32);
+  p{
+    color: $white;
+  }
 }
-
-
-@media (min-width: 768px) {
-
-    #header.top-fixed {
-        box-shadow: 0 0 10px 1px rgba(0,0,0,.1);
-        background: $Azul;
-        border-bottom: none;
-        .navbar-brand {
-            padding: 15px 0;
-            img{width: 200px;}
-        }
-
-        #menu ul > li > a {
-            padding-top: 28px;
-            padding-bottom: 20px;
-        }
-        a{
-          &:hover{
-            color: $white !important;
-          }
-        }
-    }
-
-}
-
-#header.open {
-    .navbar-header {
-        #menu-toggle {
-            .icon-bars {
-                background: transparent !important;
-
-                &:before {
-                    // background: $menu-text;
-                    top: 0;
-                    transform: rotate(45deg);
-                    transition-delay: 0s, .3s;
-                }
-                &:after {
-                    // background: $menu-text;
-                    bottom: 0;
-                    transform: rotate(-45deg);
-                    transition-delay: 0s, .3s;
-                }
-            }
-        }
-    }
-}
-
 
 /******************** RESPONSIVO ********************/
 
@@ -323,135 +283,23 @@ footer{
 
     /***** BASE *****/
 
-    body { padding-top: 70px; }
-
     h1 { font-size: 42px; }
     h2 { font-size: 36px; }
     h3 { font-size: 28px; }
     h6 { font-size: 16px; }
 
 
-    /***** HEADER *****/
-
-    #header {
-        box-shadow: 0 0 10px 1px rgba(0,0,0,.1);
-        background: $Azul;
-        .navbar-brand {
-            padding: 0 0;
-            margin-left: 15px;
-
-            img { height: 70px;width: 60%;padding: 10px; }
-        }
-
-        #menu {
-            background: $Azul;
-            border-top: solid 5px $white;
-            float: none;
-            position: fixed;
-            top: 70px;
-            left: 100%;
-            bottom: 0;
-            width: 100%;
-
-            transition: left .6s ease-in-out, top .4s ease-in-out;
-
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            ul {
-                width: 100%;
-                padding: 0;
-
-                & > li {
-                    float: none;
-                    margin: 0;
-                    &:nth-child(5){
-                      margin-right: 0;
-                    }
-
-                    & > a {
-                        padding: 8px 15px;
-                        margin-bottom: 2px;
-                        margin-left: 0;
-
-                        &:after { content: none; }
-
-                        &:before {
-                            content: '';
-
-                            display: block;
-                            position: absolute;
-                            top: 50%;
-                            left: 0;
-                            height: 20px;
-
-                            border-left: 14px solid $white;
-
-                            transform: translateY(-50%);
-                        }
-                    }
-
-                    &:last-child > a { margin-bottom: 0; }
-                }
-            }
-        }
-
-        &.open #menu {
-            left: 0%;
-        }
-    }
-    .sessao-video-home h2{width: 75%;}
-    .sessao-video-home h3{width: 65%;}
-    .news-home h2{width: 45%;}
-    .instagram-home h2{width: 45%;}
-    .news-page h2{width: 45%;}
-    .cases-page h2{width: 45%;}
-    .contato-page h2{width: 45%;}
-    .especialidade-page h2{width: 45%;}
-    .sobre-page h2{width: 45%;}
-    .pre-footer{text-align: center;}
-    .pre-footer .menu-footer{padding: 0;}
-    .pre-footer .menu-footer li{margin-left: 0;display: block;}
-    .contato-page .btn-newlife:after{left: 50px;}
 }
 
 // SM
 @media (min-width: 768px) and (max-width: 991px) {
 
-    /***** HEADER *****/
-
-    #header {
-        .navbar-brand {
-            padding: 25px 0;
-
-            img { height: 36px; }
-        }
-
-        #menu {
-            ul {
-                font-size: 14px;
-
-                & > li > a { padding: 28px 12px; }
-            }
-        }
-    }
 
 }
 
 // MD
 @media (min-width: 768px) and (max-width: 1200px) {
-  .sessao-video-home h2{width: 75%;}
-  .sessao-video-home h3{width: 65%;}
-  .news-home h2{width: 45%;}
-  .instagram-home h2{width: 45%;}
-  .pre-footer{text-align: center;}
-  .pre-footer .menu-footer{padding: 0;}
-  .pre-footer .menu-footer li{margin-left: 0;display: block;}
-  #header #menu ul > li > a{padding: 28px 3px;}
-  #header #menu ul > li > a{font-size: 12px;}
-  #header #menu ul > li:nth-child(5){margin-right: 0;}
-  #header #menu .logo{position: absolute;left: 0px;bottom: -20px;}
+  
 }
 
 // LG
