--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -745,6 +745,48 @@ figure.fit {
 
 /**************** FIM trilipo ****************/
 
+/**************** INICIO sucesso ****************/
+.sucesso-body{
+  height: 100%;
+  background: url(assets/img/sucesso/fundo.png)no-repeat center top;
+  background-size: cover;
+}
+
+.sucesso-sessao-1{
+  height: 100%;
+}
+
+.sucesso-sessao-2{
+  height: 100%;
+  .boxobrigado{
+    border: solid 2px white;
+    padding: 13px;
+    margin-top: 110px;
+    h2{
+      margin-bottom: 0;
+      text-align: center;
+      color: white;
+      text-transform: uppercase;
+    }
+  }
+  p{
+    color: $white;
+    margin-top: 10px;
+  }
+}
+
+.sucesso-footer{
+    background: $black;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    color: $white;
+    padding-top: 20px;
+    font-size: 12px;
+}
+
+/**************** FIM sucesso ****************/
+
 
 /******************** RESPONSIVO ********************/
 
@@ -757,8 +799,12 @@ figure.fit {
     h2 { font-size: 36px; }
     h3 { font-size: 28px; }
     h6 { font-size: 16px; }
-
-
+    .sucesso-footer{
+      text-align: center !important;
+    }
+    .sucesso-body{
+      background-size: auto;
+    }
 }
 
 // SM
